# library-data-analysis-system

./: .env.example  .gitignore  LICENSE  README.md  README_zh.md  adjust_categories.py  analyze_data.py  analyze_data2.py  analyze_full.py  analyze_redistribution.py  check_categories.py  check_current_data.py  check_db.py  check_db_status.py  check_password.py  check_round_numbers.py  check_schema.py  check_schema2.py  check_user.py  diagnose_login.py  final_verification.py  fix_books.py  fix_categories.py  list_tables.py  pyproject.toml  rebalance_categories.py  redistribute_all.py  redistribute_borrowers.py  redistribute_data.py  redistribute_final.py  redistribute_robust.py  redistribute_safe.py  redistribute_simple.py  test_api.py  test_full_login.py  test_login_flow.py
data/: action_types.csv  book_categories.csv  borrowers.csv  countries.csv  education_levels.csv
dpo-data-generator/: QUICKSTART.md  README.md  START.md  USAGE.md  config.yaml.example  pyproject.toml  run.py  test_annotate.py  test_new_flow.py  使用说明 - 自动生成问题版.md  使用说明.txt
dpo-data-generator/src/: __init__.py  annotator.py  api_client.py  main.py  models.py  storage.py
library_data_analysis_fastapi/: main.py  pyproject.toml
library_data_analysis_fastapi/app/: __init__.py  auth.py  cache.py  config.py  database.py  tasks.py
library_data_analysis_fastapi/app/routers/: analysis.py  auth.py  books.py  borrows.py  imports.py  insights.py  overview.py  readers.py
library_data_analysis_vue/: index.html  package-lock.json  package.json  vite.config.ts
library_data_analysis_vue/src/: App.vue  MODULES.md
library_data_analysis_vue/src/api/: analysis.ts  auth.ts  books.ts  borrows.ts  imports.ts  index.ts  insights.ts  library.ts  overview.ts  readers.ts
library_data_analysis_vue/src/assets/: base.css
library_data_analysis_vue/src/components/: CategoryList.vue  DetailPanel.vue  InsightsPanel.vue  LoadingSpinner.vue  PageHeader.vue  StatCard.vue
library_data_analysis_vue/src/components/icons/: IconBase.vue
library_data_analysis_vue/src/composables/: useAuth.ts  useDropdown.ts  useLoading.ts  useSearch.ts  useTime.ts  useToast.ts
library_data_analysis_vue/src/constants/: index.ts
library_data_analysis_vue/src/i18n/: index.ts  types.ts
library_data_analysis_vue/src/i18n/locales/: en.ts  ja.ts  zh-CN.ts  zh-TW.ts
library_data_analysis_vue/src/i18n/locales/en/: analysis.ts  book.ts  borrow.ts  category.ts  common.ts  degree.ts  import.ts  insights.ts  library.ts  login.ts  months.ts  nav.ts  overview.ts  predict.ts  reader.ts  register.ts  report.ts  settings.ts  trend.ts
library_data_analysis_vue/src/i18n/locales/ja/: analysis.ts  book.ts  borrow.ts  category.ts  common.ts  degree.ts  import.ts  index.ts  insights.ts  library.ts  login.ts  nav.ts  overview.ts  predict.ts  reader.ts  register.ts  report.ts  settings.ts  trend.ts
library_data_analysis_vue/src/i18n/locales/zh-CN/: analysis.ts  book.ts  borrow.ts  category.ts  common.ts  degree.ts  import.ts  nav.ts  (+10 more)
library_data_analysis_vue/src/router/: index.js  index.ts
library_data_analysis_vue/src/stores/: data.ts  user.ts
library_data_analysis_vue/src/styles/: buttons.css  design-tokens.css  login.css
library_data_analysis_vue/src/utils/: cache.ts  export.ts  format.ts  timer.ts
library_data_analysis_vue/src/views/: AnalysisView.vue  BookView.vue  BorrowView.vue  CategoryView.vue  DashboardView.css  DashboardView.vue  ImportView.vue  LibraryView.vue  LoginView.vue  OverviewView.css  OverviewView.vue  PredictView.vue  ReaderView.vue  RegisterView.vue  ReportView.vue  SettingsView.vue  TrendView.vue
model-downloader/: pyproject.toml
(+19 files in other folders)
