[project]
name = "library-data-analysis"
version = "0.6.0"
description = "Library data analysis system with JWT authentication and captcha verification"
authors = [
    {name = "tianshengzhe"}
]
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn",
    "psycopg2-binary",
    "pyjwt",
    "passlib",
    "python-dotenv",
    "pillow"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
