[project]
name = "library-data-analysis"
version = "0.10.0"
description = "Library data analysis system with JWT authentication, captcha verification, user registration and independent user settings page"
authors = [
    {name = "tianshengzhe"}
]
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn",
    "psycopg2-binary",
    "pyjwt",
    "python-dotenv",
    "pillow",
    "bcrypt (>=5.0.0,<6.0.0)",
    "python-multipart"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
